<resources>
    <string name="app_name">XP</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastra_se">Cadastra-se</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_raking">Ranking</string>
    <string name="menu_quiz">Quiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirmar Senha</string>
    <string name="password">Senha</string>
    <string name="name">Nome</string>
    <string name="titulo_quiz">Escolha o tipo de Quiz</string>
    <string name="biologicas">Biologicas</string>
    <string name="exatas">Exatas</string>
    <string name="humanas">Humanas</string>

</resources>
