<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background"
    android:gravity="center"
    android:layout_gravity="center"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/senha"
            android:layout_margin="5dp"
            android:ellipsize="start"
            android:inputType="textPassword"/>

        <Button android:id="@+id/login_entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrar"
            android:background="#dac100"
            android:textColor="#fff"
            android:layout_margin="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastra_se"
            android:layout_margin="5dp"
            android:textColor="#4253e9"
            android:id="@+id/link_cadastro"
            android:background="#00ffffff"

            />

    </LinearLayout>



</LinearLayout>